@@ -1,3 +1,7 @@
+2001-03-23  Glynn Foster <glynn.foster@sun.com>
+	* logout.c: Get rid of gsm-protocol calls since they are not 
+	  needed.
+
 Wed Mar 14 12:39:26 2001  George Lebl <jirka@5z.com>
 
 	* logout.c:  call poweroff and reboot instead of shutdown, that works
